<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure_light">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="4dp"
        android:backgroundTint="@color/indigo_500"
        android:layout_margin="4dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivAuthorAvatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_margin="4dp"
                android:elevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/author_avatar"
                />

            <TextView
                android:id="@+id/tvAuthorName"
                android:textColor="@color/design_default_color_on_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivAuthorAvatar"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:maxLength="30"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="@id/ivAuthorAvatar"
                app:layout_constraintBottom_toTopOf="@id/tvPublished"
                tools:text="Author long long long long long long long long long long name" />

            <TextView
                android:id="@+id/tvPublished"
                android:textColor="@color/design_default_color_on_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivAuthorAvatar"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvAuthorName"
                app:layout_constraintBottom_toBottomOf="@id/ivAuthorAvatar"
                tools:text="12 may 2022" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvAuthor"
        app:layout_constraintBottom_toTopOf="@id/bottomLine"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIconAudio"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_audio_attachment"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:tint="@color/indigo_500"
                android:contentDescription="@string/icon_attachment"
                android:visibility="gone"
                tools:visibility="visible"/>

            <VideoView
                android:id="@+id/vvAttachment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ivAttachment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon_attachment"
                android:maxHeight="300dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:srcCompat="@drawable/welcome_background"
                android:visibility="gone"
                tools:visibility="visible"
                />


            <TextView
                android:id="@+id/tvContent"
                android:textColor="@color/indigo_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/cvAuthor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Some long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long text"
                android:paddingBottom="8dp"
                />

        </LinearLayout>



    </ScrollView>

    <FrameLayout
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@id/ivLike"
        android:background="@color/indigo_500"/>


    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/button_like"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_heart_border"
        />

    <TextView
        android:id="@+id/tvAmountOfLikes"
        android:textColor="@color/indigo_500"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivLike"
        app:layout_constraintTop_toTopOf="@id/ivLike"
        app:layout_constraintBottom_toBottomOf="@id/ivLike"
        android:layout_marginStart="8dp"
        tools:text="445" />


</androidx.constraintlayout.widget.ConstraintLayout>